[gd_scene load_steps=2 format=3 uid="uid://bwjcy6tkuu38t"]

[ext_resource type="Script" uid="uid://clerf2peb8nh7" path="res://Game/Scripts/UI/GameOver/game_over.gd" id="1_o8gji"]

[node name="GameOver" type="CanvasLayer"]
script = ExtResource("1_o8gji")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(2.40654e-08, 0.196006, 0.379791, 1)

[node name="Score" type="Label" parent="."]
offset_left = 140.0
offset_top = 68.0
offset_right = 229.0
offset_bottom = 91.0
text = "Final Score:"

[node name="TileScore" type="Label" parent="."]
offset_left = 140.0
offset_top = 88.0
offset_right = 207.0
offset_bottom = 111.0
text = "Tiles Hit:"

[node name="Combo" type="Label" parent="."]
offset_left = 140.0
offset_top = 108.0
offset_right = 202.0
offset_bottom = 131.0
text = "Combo:"

[node name="Rating" type="Label" parent="."]
offset_left = 140.0
offset_top = 128.0
offset_right = 202.0
offset_bottom = 151.0
text = "Rating:"

[node name="GameOver" type="Label" parent="."]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.186
anchor_right = 0.5
anchor_bottom = 0.186
offset_left = -46.0
offset_top = -23.616
offset_right = 46.0
offset_bottom = -0.616001
grow_horizontal = 2
grow_vertical = 2
text = "GAME OVER"

[node name="RetryButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -159.5
offset_top = 60.0
offset_right = -59.5
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
text = "Retry"

[node name="NextButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 60.5
offset_top = 60.0
offset_right = 160.5
offset_bottom = 95.0
grow_horizontal = 2
grow_vertical = 2
text = "Next"

[node name="MenuButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -50.0
offset_top = -68.0
offset_right = 50.0
offset_bottom = -33.0
grow_horizontal = 2
grow_vertical = 0
text = "Menu"

[connection signal="pressed" from="RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="MenuButton" to="." method="_on_menu_button_pressed"]
